--- a/template_51688/Free_HTML5_Web_Design_Theme/site/index.html
+++ b/template_51688/Free_HTML5_Web_Design_Theme/site/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="css/stuck.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/ihover.css">
+<link rel="stylesheet" href="css/beethoven.css">
 <style>
 .caput {
 	height:181px;
@@ -68,11 +69,7 @@ header {
     <div class="container">
       <div class="row">
         <div class="grid_12">
-        <h1>
-          <a href="index.html">
-            <img src="images/logo.png" alt="Logo alt">
-          </a>
-        </h1>
+        <!--h1><a href="index.html"><img src="images/logo.png" alt="Logo alt"></a></h1-->
           <div class="navigation ">
             <nav>
               <ul class="sf-menu">
