--- a/template_51688/Free_HTML5_Web_Design_Theme/site/index.html
+++ b/template_51688/Free_HTML5_Web_Design_Theme/site/index.html
@@ -50,13 +50,13 @@ header {
 <link rel="stylesheet" media="screen" href="css/ie1.css">
 <![endif]-->
 </head>
-<body class="page1" id="top">
+<body>
 <!--==============================
               header
 =================================-->
 <div class="caput">
 	
-  </div>
+</div>
   
 <header>
 <!--==============================
@@ -73,11 +73,42 @@ header {
           <div class="navigation ">
             <nav>
               <ul class="sf-menu">
-               <li class="current"><a href="index.html">About</a></li>
-               <li><a href="index-1.html">Services</a></li>
-               <li><a href="index-2.html">Portfolio</a></li>
-               <li><a href="index-3.html">Blog</a></li>
-               <li><a href="index-4.html">Contacts</a></li>
+               <li class="current"><a href="index.html">Биография</a>
+				<ul>
+					<li><a href="">Краткая биография</a></li>
+					<li><a href="">Современники</a></li>
+					<li><a href="">Высказывания и афоризмы</a></li>
+					<li><a href="">Основные даты жизни</a></li>
+					<li><a href="">Загадки и версии</a></li>
+					<li><a href="">Современники</a></li>
+					<li><a href="">Анекдоты и высказывания о Бетховене</a></li>
+					<li><a href="">ЧаВо</a></li>
+				</ul>
+			   </li>
+               <li><a href="index-1.html">Сочинения</a>
+				<ul>
+					<li><a href="">Каталог</a></li>
+					<li><a href="">Аудио</a></li>
+					<li><a href="">Видео</a></li>
+					<li><a href="">Ноты</a></li>
+					<li><a href="">находки и реконструкции</a></li>
+				</ul>
+			   </li>
+               <li><a href="index-2.html">Документы</a>
+				<ul>
+					<li><a href="">Портреты</a></li>
+					<li><a href="">Письма</a></li>
+				</ul>
+			   </li>
+               <li><a href="index-3.html">Библиотека</a>					
+				<ul>
+					<li><a href="">Статьи  </a></li>
+					<li><a href="">Книги</a></li>
+					<li><a href="">фильмы</a></li>
+				</ul>
+			   </li>
+               <li><a href="index-4.html">Видео</a></li>
+			   <li><a href="index-4.html">Места</a></li>
              </ul>
             </nav>
             <div class="clear"></div>
@@ -90,11 +121,74 @@ header {
 <!--=====================
           Content
 ======================-->
-<section class="content"><div class="ic">More Website Templates @ TemplateMonster.com - June 16, 2014!</div>
+<section class="content">
   <div class="container">
     <div class="row">
-      <div class="grid_12">
-        <div class="ta__center">
+      <div class="grid_9">
+        
+		
+			<div class="antique"><div><div><div><div><div>
+				<p>Людвиг ван Бетховен (1770-1827) - великий немецкий композитор и пианист, один из трех "венских классиков" (наряду с Гайдном и Моцартом). Ключевая фигура переходного периода от классицизма к романтической эпохе в европейской классической музыке, Бетховен по сей день остается одним из самых известных и исполняемых композиторов в мире.</p>
+			</div></div></div></div></div></div>
+			
+			
+			<h1>Людвиг ван Бетховен</h1>
+			<h2>Краткая биография</h2>
+			<!--(См. также <a href="/node/1187">Биографию Бетховена в картинках</a>)-->
+			
+			<div class="thumb tright">
+			<div class="thumbinner" style="width:172px;"><a class="image" href="/img/Beethoven_house_of_birth_Bonn_2008.jpg"><img alt="Дом, в котором родился Бетховен, Bonngasse 20, сейчас это музей Beethoven-Haus" class="thumbimage" src="http://beethoven.ru/img/170px-Beethoven_house_of_birth_Bonn_2008.jpg" style="height:281px; width:170px" /></a>
+			<div class="thumbcaption">Дом, в котором родился Бетховен, Bonngasse 20, сейчас это музей Beethoven-Haus</div>
+			</div>
+			</div>
+
+			<p>Людвиг ван Бетховен (Ludwig van Beethoven) родился в Бонне, который с 1597 по 1794 гг. являлся резиденцией Кёльнского курфюрста-архиепископа и частью Священной Римской империи Германской нации (таково было официальное название империи Габсбургов со столицей в Вене в тот момент)<a class="see-footnote" id="footnoteref1_fe368pz" title="Вольтер шутил по этому поводу, что она не была «священной», не была «римской» и не была «империей»." href="#footnote1_fe368pz">1</a>. Основателем музыкальной династии был дед композитора Лодевик ван Бетховен (Lodewijk van Beethoven, 1712–1773), фламандский музыкант (бас), к концу жизни занимавший должность капельмейстера - руководителя придворной капеллы. Его единственным сыном был Иоганн ван Бетховен (Johann van Beethoven, 1740—1792) - отец Людвига, названного так в честь деда. Иоганн, как и его отец, служил в капелле в качестве вокалиста (тенора) и подрабатывал, давая уроки игры на скрипке и клавире. В 1767 году он женился на Марии-Магдалине Кеверих (Maria Magdalena Kewerich, 1748—1787), дочери придворного шеф-повара в Кобленце (резиденция Трирского архиепископа), а через три года родился Людвиг ван Бетховен. Ребенок был крещен по католическому обряду 17 декабря 1770, поэтому предположительно датой рождения считается 16 декабря. В то время детей крестили на следующий день после рождения, кроме того, известно, что и родные Бетховена, и один из его учителей Иоганн Альбрехтсбергер (Johann Albrechtsberger) отмечали день его рождения именно 16 декабря. Из семи детей Иоганна и Марии-Магдалины ван Бетховен выжили только трое - второй сын Людвиг и два его младших брата - Каспар Карл (Caspar Anton Carl, 1774 - 1815) и Николаус Иоганн (Nikolaus Johann, 1776 - 1848)</p>
+			<p>Первым учителем музыки Бетховена был его отец. Традиционно считается, что он был весьма суров по отношению к маленькому Людвигу, который "за инструментом частенько бывал в слезах". Однако, например, авторитетный словарь Гроува (Grove Dictionary of Music and Musicians) утверждает, что для этого нет надежных документальных оснований, и что "спекуляции и мифотворчество сделали свое дело". Другими учителями Бетховена в этот период были: органист капеллы Жиль Ван ден Эден (Gilles van den Eeden, ум. 1782), Тобиас Фридрих Пфайфер (Tobias Friedrich Pfeiffer), друг семьи, который занимался с ним на клавире, и Франц Ровантини (Franz Rovantini) - скрипка и альт. Его музыкальный талант проявился рано, поэтому отец пытался сделать из него вундеркинда и второго маленького Моцарта. Так, например, на афише первого публичного выступления в марте 1778 года Людвиг был объявлен шестилетним ребенком, в то время, как ему уже шел восьмой год.</p>
+			
+			<div class="thumb tright">
+			<div class="thumbinner" style="width:172px;"><a class="image" href="/img/483px-Thirteen-year-old_Beethoven.jpg"><img alt="Портрет Бетховена (?) в 13-летнем возрасте, неизвестный боннский мастер (предположительно 1783 год)" class="thumbimage" src="http://beethoven.ru/img/170px-Thirteen-year-old_Beethoven.jpg" style="height:211px; width:170px" /></a>
+			<div class="thumbcaption">
+			<p>Портрет Бетховена (?) в 13-летнем возрасте, неизвестный боннский мастер (предположительно 1783 год)</p>
+			</div>
+			</div>
+			</div>
+
+			<p>Однако, наибольшее влияние на начальное музыкальное образование Бетховена оказал Кристиан Готлиб Нефе (Christian Gottlob Neefe), назначенный органистом придворной капеллы в 1779 году. Нефе занимался с маленьким Людвигом композицией, под его руководством было написано и издано в марте 1783 года первое опубликованное произведение Бетховена - <a href="/node/484">Вариации на тему марша Дресслера</a>. С Нефе Бетховен внимательно изучал «Хорошо темперированный клавир» И.С.Баха и произведения Генделя, знакомился с музыкой старших современников: Ф.Э.Баха, Гайдна и Моцарта. С 10 лет Бетховен уже работаел в качестве помошника органиста, сначала бесплатно, а с 1784 года - как штатный музыкант капеллы, которой в это время руководил капельмейстер Andrea Luchesi. В 1783 году были опубликованы <a href="/node/486">первые три фортепианные сонаты</a> Бетховена, посвященные тогдашнему курфюрсту Максимилиану Фридриху, и получившие общее название "Курфюрст". Максимилиан Фридрих, который умер в 1784 году, вскоре после назначения Бетховена помощником органиста, обратил внимание на одаренного юношу и субсидировал его музыкальные занятия.</p>
+			<p>Новым курфюрстом стал Максимилиан Франц, младший сын австрийской императрицы Марии Терезии. Его правление отмечено модными в то время реформами в духе философии Просвещения, более широкой поддержкой образования и искусства. Юный Бетховен наверняка находился под впечатлением этих новых веяний, кроме того, на него могли повлиять идеи масонства, поскольку и Нефе, и многие из его окружения были членами местного отделения масонского ордена Иллюминатов.</p>
+			<p>В марте 1787 Бетховен впервые посетил Вену (точно неизвестно, кто финансировал это путешествие), видимо, в надежде учиться у Моцарта. Неизвестно, встречались ли они на самом деле, однако легенда приписывает Моцарту слова, сказанные в адрес юного Бетховена: "Обратите внимание на него, он всех заставит говорить о себе". Спустя всего две недели Бетховен узнал, что его мать тяжело больна, и поспешил домой. Вскоре после этого Мария-Магдалина умерла от туберкулеза, а отец запил еще сильнее, так что Людвиг остался фактическим главой семьи, ответственным за судьбу двух младших братьев, и был вынужден провести еще около пяти лет в Бонне.</p>
+			<p>В это время он знакомится с людьми, составившими его окружение на ближайшие годы. Франц Вегелер, молодой студент-медик, познакомил его с семьей фон Брёйнинг, где Бетховен часто бывал, и в качестве учителя музыки для детей, и в качестве друга. Возможно, здесь он находил ту атмосферу семейного тепла, которой ему так не хватало дома. Пребывание в интеллигентной среде стимулировало его интерес к немецкой и античной литературе, философии, так что Бетховен даже поступил в 1789 году вольнослушателем на философский факультет Боннского университета, правда, пребывание его там было недолгим. В это же время Бетховен познакомился с графом Фердинандом фон Вальдштейн (Ferdinand von Waldstein), который всю жизнь оставался его другом и меценатом.</p>
+
+			<div class="thumb tleft">
+			<div class="thumbinner" style="width:222px;"><a class="image" href="/img/800px-Universitat_Bonn.jpg"><img alt="" class="thumbimage" src="http://beethoven.ru/img/220px-Universitat_Bonn.jpg" style="height:79px; width:220px" /></a>
+			<div class="thumbcaption">Дворец Кёльнского курфюрста в Бонне</div>
+			</div>
+			</div>
+			
+			<p>В 1789 году он получил судебное постановление, по которому половина заработной платы отца переходила непосредственно к нему на содержание семьи. Дополнительным источником дохода для него была служба в оркестре капеллы в качестве альтиста. Бетховен знакомится с итальянскими, французскими и немецкими операми, которые ставились при дворе в это время, среди них были и три оперы Моцарта. Здесь же он подружился со своим сверстником Антоном Рейха (Anton Reicha), флейтистом и скрипачом, а впоследствии известным композитором и теоретиком.</p>
+			<div class="divider">&nbsp;</div>
+			<p><a name="bio2"></a></p>
+			<h2>Начало карьеры в Вене</h2>
+			<p>В 1792 году с помощью курфюрста Бетховен снова приезжает в Вену. Вероятно, он уже был представлен Йозефу Гайдну в конце 1790, когда тот во время путешествия в Лондон остановился в Бонне на Рождество, и они точно встречались на обратном пути Гайдна из Лондона в Вену в июле 1792. Поэтому вполне вероятно, что тогда же появилась договоренность о том, что Бетховен будет учиться у прославленного мастера. За это время Бетховен написал значительное количество работ (ни одна из них не была тогда опубликована, и большинство не имеют опуса), которые демонстрируют растущее разнообразие и зрелость стиля. Так, в <a href="/node/487">цикле вариаций 1791 года</a> исследователи (Barry Cooper. Beethoven.) находят истоки тем его третьей "Героической" симфонии. В ноябре 1792, на фоне слухов о войне против Франции, Бетховен покидает Бонн и едет в Вену, а вскоре после прибытия узнает, что его отец умер. Граф Вальдштейн в своей прощальной записке Бетховену написал: "Благодаря непрерывному усердию, Вы обретете дух Моцарта из рук Гайдна". Впрочем, Бетховен внутренне поддержал широко распространенное отношение к себе как к преемнику недавно умершего Моцарта, в течение ближайших нескольких лет изучая его работы, и придерживаясь в своем творчестве моцартовского стиля.</p>
+			
+			<div class="thumb tleft">
+			<div class="thumbinner" style="width:172px;"><a class="image" href="/img/Beethoven_Riedel_1801.jpg"><img alt="" class="thumbimage" src="http://beethoven.ru/img/170px-Beethoven_Riedel_1801.jpg" style="height:193px; width:170px" /></a>
+			<div class="thumbcaption">
+			<p>Портрет Бетховена, предположительно 1800 год</p>
+			</div>
+			</div>
+			</div>
+			
+			<p>В Вене Бетховен далеко не сразу получил известность как композитор, несмотря на то, что он много времени уделял именно занятиям композицией. Под руководством Гайдна он стремился овладеть мастерством контрапункта. Кроме того, он брал уроки игры на скрипке у Игнаца Шуппанцига (Ignaz Schuppanzigh) и уроки итальянского вокального письма у Антонио Сальери. Занятия с Сальери продолжались, как минимум, до 1802, а возможно, и до 1809. После отъезда Гайдна в Англию в 1794, Бетховен должен был вернуться в Бонн, к курфюрсту. Но он предпочел остаться в Вене, продолжая обучение контрапункту у Иоганна Альбрехтсбергера. Он перестал получать стипендию от курфюрста, однако множество венских вельмож уже признали его талант и предложили финансовую поддержку. В их числе были князь Йозеф Франц Лобковиц (Joseph Franz Lobkowitz), князь Карл Лихновский (Karl Lichnowsky) и барон Готфрид ван Свитен (Gottfried van Swieten).</p>
+			<p>К 1793 году Бетховен уже зарекомендовала себя как импровизатор в салонах знати, кроме того, известно, что он часто исполнял прелюдии и фуги из "Хорошо темперированного клавира" И.С.Баха. Его друг Николай Зимрок начал публиковать его сочинения, и первыми, как считается, были изданы <a href="/node/490">вариации для фортепиано на тему из оперы "Красная Шапочка" (Woo 66)</a>. Бетховен провел весь 1793 год и большую часть 1794 за сочинением, однако, видимо, воздерживался от "официальной" публикации своих работ.</p>
+			<p>Первое публичное выступление Бетховена в Вене состоялось в марте 1795, где он дебютировал со своим фортепианным концертом. Точно не установлено, был ли это <a href="/node/72">первый</a>, или <a href="/node/73">второй концерт</a>, оба они находились в этот момент в состоянии, близком к завершению, и оба были закончены и опубликованы через несколько лет. Вскоре после этого выступления Бетховен опубликовал свой первый опус - <a href="/node/492">Фортепианные трио Opus 1</a>, с посвящением его тогдашнему покровителю князю Лихновскому. Издание имело финансовый успех, так что прибыли Бетховена было почти достаточно для покрытия его годовых расходов. <a href="/node/560">Читать дальше →</a></p>
+			<div class="divider">&nbsp;</div>
+			<!--a href="/node/1189">Лодевик ван Бетховен</a--><!--(<a href="/node/1188">Фламандские предки Бетховена</a>, <a href="/node/1425">Происхождение фамилии Beethoven</a>, <a href="/node/1220">Памятник маленькому Людвигу и его деду в г. Мехельн</a>, <a href="/node/1230">Дом Михаэля ван Бетховен в Мехельне</a>, <a href="/node/1231">Бывшая школа церковных певцов в Мехельне</a>)-->
+			
+			<ul class="footnotes">
+				<li class="footnote" id="footnote1_fe368pz"><a class="footnote-label" href="#footnoteref1_fe368pz">1.</a> Вольтер шутил по этому поводу, что она не была «священной», не была «римской» и не была «империей».</li>
+			</ul>
+		
+		<div class="ta__center">		
           <h2>Unique Artistic Design for All Tastes</h2>
           <div class="st1">If you have any questions about this <span class="color1"><a href="http://blog.templatemonster.com/free-website-templates/" rel="nofollow">goodie</a></span>, read the post about it. <br> Find a bunch of alike <span class="color1"><a href="http://www.templatemonster.com/properties/topic/design-photography/" rel="nofollow">designs</a></span> at TemplateMonster’s website.</div>
           <div class="banners">
@@ -125,9 +219,40 @@ header {
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="clear sep__1"></div>
+	  <div class="grid_3">
+		<h2 class="block-title">Афиша</h2>
+		<div class="content">
+			<div class="view view-afisha view-id-afisha view-display-id-block view-dom-id-a5cf89d6452544494ebfe1425053883f">
+				<div class="view-content">
+					<div class="views-row views-row-1 views-row-odd views-row-first views-row-last">
+      
+						<div class="views-field views-field-field-image">        
+							<div class="field-content">
+								<a href="/node/1491"><img src="http://beethoven.ru/sites/default/files/styles/thumbnail/public/k-orkestr-29-07-fin-sm_.jpg?itok=LL9nec2-" width="71" height="100" alt="" /></a>
+							</div>
+						</div>  
+						<div class="views-field views-field-field-rusdate">        
+							<div class="field-content">29 июля 2018, ММДМ</div>  
+						</div>  
+						<div class="views-field views-field-title">        
+							<span class="field-content"><a href="/node/1491">Впервые в Москве выступит Китайский Филармонический Оркестр</a></span>  
+						</div>  
+					</div>
+				</div>
+			 </div>
+		</div>
+		<h2 class="block-title">Все произведения</h2>    
+		<div class="content">
+			<ul>
+				<li><a class="active-trail active" href="/works" title="">По жанрам</a></li>
+				<li><a href="/catalog" title="">По № каталога</a></li>
+				<li><a href="/works-by-date" title="">По дате написания</a></li>
+			</ul>
+		</div>
+	  </div>
+	</div>
+  </div>  
+  <div class="clear sep__1"></div>  
   <div class="container">
     <div class="row">
       <div class="grid_12">
@@ -217,7 +342,8 @@ header {
           <a href="#" class="fa fa-google-plus"></a>
           <a href="#" class="fa fa-youtube-play"></a>
         </div>
-        <div class="copyright"><span class="brand">Web Design</span> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a> <div>Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a></div>
+        <div class="copyright">
+			<span class="brand">Web Design</span> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a> 		
         </div>
       </div>
     </div>
